--- a/.github/workflows/deploy-function-app.yml
+++ b/.github/workflows/deploy-function-app.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Deploy to Azure Function App
       run: |
         az functionapp deployment source config-zip \
-          --resource-group <resource-group-name> \
+          --resource-group rg-mcp-demo \
           --name ${{ secrets.AZURE_FUNCTIONAPP_NAME }} \
           --src ./publish
       env:
