--- a/.github/workflows/deploy-function-app.yml
+++ b/.github/workflows/deploy-function-app.yml
@@ -1,50 +1,54 @@
 name: Deploy Function App
 
-permissions:
-  id-token: write
-  contents: read
-
 on:
   push:
     branches:
       - main
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+
+env:
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
+  DOTNET_VERSION: '8' # set this to the dotnet version to use
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: 'Checkout GitHub Action'
+        uses: actions/checkout@v4
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: '8.0.x'
+      - name: Setup DotNet ${{ env.DOTNET_VERSION }} Environment
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: ${{ env.DOTNET_VERSION }}
 
-    - name: Install dependencies
-      run: dotnet restore src/Monkey/Monkey.sln
+      - name: 'Resolve Project Dependencies Using Dotnet'
+        shell: bash
+        run: |
+          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
+          dotnet build src/Monkey/Monkey.sln --configuration Release --output ./output
+          popd
+      
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+            client-id: ${{ secrets.AZURE_CLIENT_ID }}
+            tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+            subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-    - name: Build project
-      run: dotnet build src/Monkey/Monkey.sln --configuration Release
-
-    - name: Publish project
-      run: dotnet publish src/Monkey/Monkey.sln --configuration Release --output ./publish
-
-    - name: Login to Azure
-      uses: azure/login@v2
-      with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
-
-    - name: Deploy to Azure Function App
-      run: |
-        az functionapp deployment source config-zip \
-          --resource-group rg-mcp-demo \
-          --name ${{ secrets.AZURE_FUNCTIONAPP_NAME }} \
-          --src ./publish
-      env:
-        AZURE_FUNCTIONAPP_NAME: ${{ secrets.AZURE_FUNCTIONAPP_NAME }}
+      - name: 'Run Azure Functions Action'
+        uses: Azure/functions-action@v1
+        id: fa
+        with:
+            app-name: 'func-api-5up2ijvmldoj6'
+            slot-name: 'Production'
+            package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/output'
+            
